# cracktile3d

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: app.rs  keybindings.rs  main.rs  settings.rs
src/anim/: mod.rs
src/bones/: mod.rs
src/history/: commands.rs  mod.rs
src/input/: mod.rs
src/io/: mod.rs
src/paint/: mod.rs
src/render/: camera.rs  gizmo.rs  grid.rs  mod.rs  renderer.rs  skybox.rs  vertex.rs
src/render/shaders/: line.wgsl  skybox.wgsl  tile.wgsl
src/scene/: mesh.rs  mod.rs  object.rs
src/tile/: mod.rs  palette.rs  tileset.rs
src/tools/: mod.rs
src/tools/draw/: mod.rs  primitives.rs
src/tools/edit/: mod.rs
src/ui/: layers_panel.rs  mod.rs  paint_panel.rs  properties_panel.rs  rulers.rs  tileset_panel.rs  tools_panel.rs  uv_panel.rs  viewcube.rs
src/util/: picking.rs
