[package]
name = "cracktile3d"
version = "0.1.4"
edition = "2024"

[dependencies]
# Rendering
wgpu = "25"

# Windowing
winit = "0.30"

# UI
egui = "0.32"
egui-wgpu = "0.32"
egui-winit = "0.32"

# Math
glam = { version = "0.29", features = ["serde"] }

# Image loading
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# File dialogs
rfd = "0.15"

# Utilities
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
